sorting tasks development